<resources>
    <string name="app_name">KChartViewDemo</string>
    <string name="txt_sell">卖</string>
    <string name="txt_buy">买</string>
    <string name="txt_Inventory">持仓量</string>
    <string name="txt_Volume">成交量</string>

    <string name="txt_chart_warn">预警</string>
    <string name="txt_chart_plus">加自选</string>
    <string name="txt_chart_share">分享</string>
    <string name="txt_chart_speces">说明</string>

    <string name="txt_cancel">取消</string>
    <string name="txt_wexinfriend">微信好友</string>
    <string name="txt_wexinfriends">微信朋友圈</string>
    <string name="txt_qqfriend">QQ好友</string>
    <string name="txt_sinweibo">新浪微博</string>
    <string name="txt_contentx">收藏</string>
</resources>
