<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayout"
        android:layout_marginTop="@dimen/d50"
        android:layout_marginBottom="@dimen/d20"
        android:minHeight="@dimen/d100" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cFFFFFFFF"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingTop="@dimen/d10"
            android:paddingBottom="@dimen/d10">

            <LinearLayout
                android:id="@+id/wexinfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@mipmap/wx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_wexinfriend"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/wexinfriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@mipmap/wxfriend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_wexinfriends"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/qqfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@mipmap/qqfriend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_qqfriend"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sinwebo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@mipmap/sinwebo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_sinweibo"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/share_cancel_selector"
            android:gravity="center"
            android:paddingTop="@dimen/d10"
            android:paddingBottom="@dimen/d10"
            android:text="@string/txt_cancel"
            android:textColor="#333333"
            android:textSize="@dimen/f16" />
    </LinearLayout>

</RelativeLayout>